Fixed some image vertical alignment by using CSS' vertical-align method. Fixed top navigation leading border.

--- a/data/css/comingEpisodes.css
+++ b/data/css/comingEpisodes.css
@@ -44,7 +44,7 @@ div#insideContent {
 
 .tvshowTitleIcons {
     float: right;
-    padding: 5px 10px 0px 0px;
+    padding: 3px 5px;
 }
 
 .tvshowDiv .title { 
